packages/jsii/test/negatives/neg.member-named-after-class.ts
export class TypeName {
  public readonly typeName = 1337;
}

export class OtherType {
  public otherType() {
    return;
  }
}
